Bug 1237923 - [TV][2.5][Marketplace][FTE] Key's text is not center aligned

--- a/src/tutorial/css/smart-button.css
+++ b/src/tutorial/css/smart-button.css
@@ -70,7 +70,7 @@
   height: 8rem;
   border-radius: 4rem;
   background-color: #5f6368;
-  padding: 0 3.8rem;
+  padding: 0px 4.6rem 0px 3.8rem;
   line-height: 8rem;
   color: white;
   text-align: center;
